# integer

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.jam  index.html  integer.htm  integer_traits_test.cpp
.github/workflows/: ci.yml
doc/: Jamfile.v2  integer.idx  integer.qbk  integer_mask.html  static_log2.html  static_min_max.html
doc/doxygen/: integer_doxyfile.txt
doc/gcd/: math-gcd.qbk
doc/html/: index.html
doc/html/boost_integer/: cstdint.html  extended_euclidean.html  gcd_lcm.html  history.html  integer.html  mask.html  mod_inverse.html  traits.html
doc/modular_arithmetic/: discrete_log.qbk  extended_euclidean.qbk  mod_inverse.qbk  modular_multiplicative_inverse.qbk
example/: integer_common_factor_example.cpp  integer_log2_example.cpp  integer_mask_example.cpp  integer_static_minmax_example.cpp  integer_traits_example.cpp  integer_type_selection_example.cpp  jamfile.v2
include/boost/: cstdint.hpp  integer.hpp  integer_fwd.hpp  integer_traits.hpp  stdint.h
include/boost/integer/: common_factor.hpp  common_factor_ct.hpp  common_factor_rt.hpp  discrete_log.hpp  extended_euclidean.hpp  floor_sqrt.hpp  integer_log2.hpp  integer_mask.hpp  mod_inverse.hpp  modular_exponentiation.hpp  (+3 more)
meta/: libraries.json
test/: Jamfile.v2  common_factor_test.cpp  discrete_log_test.cpp  extended_euclidean_test.cpp  gcd_constexpr14_test.cpp  integer_log2_test.cpp  integer_test.cpp  mod_inverse_test.cpp  modular_exponentiation_test.cpp  modular_multiplicative_inverse_test.cpp  multiprecision_config.hpp
test/test_cmake/: CMakeLists.txt  main.cpp
